[gd_scene load_steps=3 format=3 uid="uid://na4hexkywup6"]

[ext_resource type="Script" uid="uid://b2g3tdhenaajo" path="res://remap/remap_wizard.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bsrktfrmtkqvo" path="res://joypad_diagram.tscn" id="2"]

[node name="RemapWizard" type="Node"]
script = ExtResource("1")

[node name="Start" type="Window" parent="."]
position = Vector2i(100, 80)
size = Vector2i(400, 333)
visible = false
min_size = Vector2i(400, 333)

[node name="Margin" type="MarginContainer" parent="Start"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layout" type="VBoxContainer" parent="Start/Margin"]
layout_mode = 2
alignment = 1

[node name="HTML5" type="VBoxContainer" parent="Start/Margin/Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="Start/Margin/Layout/HTML5"]
layout_mode = 2
text = "Try a common mapping:"

[node name="known" type="HBoxContainer" parent="Start/Margin/Layout/HTML5"]
layout_mode = 2
alignment = 1

[node name="Xbox" type="Button" parent="Start/Margin/Layout/HTML5/known"]
layout_mode = 2
text = "Xbox"

[node name="XboxOSX" type="Button" parent="Start/Margin/Layout/HTML5/known"]
layout_mode = 2
text = "Xbox (OSX)"

[node name="Label" type="Label" parent="Start/Margin/Layout"]
layout_mode = 2
text = "Or start the wizard"

[node name="Buttons" type="HBoxContainer" parent="Start/Margin/Layout"]
layout_mode = 2

[node name="Cancel" type="Button" parent="Start/Margin/Layout/Buttons"]
layout_mode = 2
text = "Cancel"

[node name="Control" type="Control" parent="Start/Margin/Layout/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Wizard" type="Button" parent="Start/Margin/Layout/Buttons"]
layout_mode = 2
text = "Wizard"

[node name="Mapping" type="Window" parent="."]
position = Vector2i(130, 100)
size = Vector2i(340, 400)
visible = false
min_size = Vector2i(340, 100)

[node name="Margin" type="MarginContainer" parent="Mapping"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Mapping/Margin"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="Mapping/Margin/VBox"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Mapping/Margin/VBox/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(600, 260)
render_target_update_mode = 0

[node name="JoypadDiagram" parent="Mapping/Margin/VBox/SubViewportContainer/SubViewport" instance=ExtResource("2")]
position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="Mapping/Margin/VBox/SubViewportContainer/SubViewport"]

[node name="Info" type="VBoxContainer" parent="Mapping/Margin/VBox"]
layout_mode = 2

[node name="Text" type="HBoxContainer" parent="Mapping/Margin/VBox/Info"]
layout_mode = 2

[node name="Text" type="Label" parent="Mapping/Margin/VBox/Info/Text"]
layout_mode = 2
text = "Currently selected: "

[node name="Value" type="Label" parent="Mapping/Margin/VBox/Info/Text"]
layout_mode = 2

[node name="Extra" type="HBoxContainer" parent="Mapping/Margin/VBox/Info"]
layout_mode = 2

[node name="FullAxis" type="CheckBox" parent="Mapping/Margin/VBox/Info/Extra"]
layout_mode = 2
text = "Full axis"

[node name="InvertAxis" type="CheckBox" parent="Mapping/Margin/VBox/Info/Extra"]
layout_mode = 2
text = "Invert Axis"

[node name="Buttons" type="HBoxContainer" parent="Mapping/Margin/VBox/Info"]
layout_mode = 2

[node name="Prev" type="Button" parent="Mapping/Margin/VBox/Info/Buttons"]
layout_mode = 2
text = "Previous"

[node name="Control" type="Control" parent="Mapping/Margin/VBox/Info/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Skip" type="Button" parent="Mapping/Margin/VBox/Info/Buttons"]
layout_mode = 2
text = "Skip"

[node name="Control2" type="Control" parent="Mapping/Margin/VBox/Info/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Mapping/Margin/VBox/Info/Buttons"]
layout_mode = 2
text = "Next"

[node name="MapWindow" type="Window" parent="."]
position = Vector2i(100, 80)
size = Vector2i(400, 400)
visible = false
min_size = Vector2i(400, 400)

[node name="Margin" type="MarginContainer" parent="MapWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MapWindow/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="MapWindow/Margin/VBoxContainer"]
layout_mode = 2
text = "This is the resulting remap string:"

[node name="TextEdit" type="TextEdit" parent="MapWindow/Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="close_requested" from="Start" to="." method="_on_start_close_requested"]
[connection signal="pressed" from="Start/Margin/Layout/HTML5/known/Xbox" to="." method="_on_xbox_pressed"]
[connection signal="pressed" from="Start/Margin/Layout/HTML5/known/XboxOSX" to="." method="_on_xboxosx_pressed"]
[connection signal="pressed" from="Start/Margin/Layout/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Start/Margin/Layout/Buttons/Wizard" to="." method="_on_Wizard_pressed"]
[connection signal="close_requested" from="Mapping" to="." method="_on_mapping_close_requested"]
[connection signal="window_input" from="Mapping" to="." method="_input"]
[connection signal="toggled" from="Mapping/Margin/VBox/Info/Extra/FullAxis" to="." method="_on_FullAxis_toggled"]
[connection signal="toggled" from="Mapping/Margin/VBox/Info/Extra/InvertAxis" to="." method="_on_InvertAxis_toggled"]
[connection signal="pressed" from="Mapping/Margin/VBox/Info/Buttons/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Mapping/Margin/VBox/Info/Buttons/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="Mapping/Margin/VBox/Info/Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="close_requested" from="MapWindow" to="." method="_on_map_window_close_requested"]
